--- a/app/src/main/assets/html5View/index.html
+++ b/app/src/main/assets/html5View/index.html
@@ -4,11 +4,12 @@
         <title>商品详情</title>
         <script type="text/javascript">
             function show(json){
-                document.getElementById("test").innerHTML = json.key;
+                //document.getElementById("test").innerHTML = json.key;
+                location.href= "http://www.baidu.com";
             }
         </script>
     </head>
-    <body >
+    <body>
         <section data-layout-fragment="content">
             <header class="searchBar" id="product_header">
                 test
